# redstone-ai

./: .gitignore  build.gradle  commit_msg.txt  commit_msg10.txt  commit_msg11.txt  commit_msg12.txt  commit_msg13.txt  commit_msg14.txt  commit_msg15.txt  commit_msg16.txt  commit_msg2.txt  commit_msg3.txt  commit_msg4.txt  commit_msg5.txt  commit_msg6.txt  commit_msg7.txt  commit_msg8.txt  commit_msg9.txt  gradle.properties  settings.gradle
redstone-mcp/: .mcp.json  pyproject.toml  stress_test.py  ws_test.py
redstone-mcp/src/redstone_mcp/: __init__.py  analysis.py  density.py  errors.py  inspect.py  mcr.py  models.py  protocol.py  server.py  system_prompt.py
redstone-mcp/tests/: test_analysis.py  test_density.py  test_inspect.py  test_mcr.py  test_protocol.py  test_server_tools.py
src/main/java/com/redstoneai/: RedstoneAI.java
src/main/java/com/redstoneai/client/: ClientSelectionPreviewState.java  ClientWorkspaceCache.java  RedstoneAIClient.java  SelectionPreviewRenderer.java  WorkspaceBoundaryRenderer.java  WorkspacePreviewWidget.java  WorkspaceScreen.java
src/main/java/com/redstoneai/command/: RAICommands.java
src/main/java/com/redstoneai/config/: RAIConfig.java
src/main/java/com/redstoneai/mcr/: MCRBlock.java  MCRParser.java  MCRPlacer.java
src/main/java/com/redstoneai/mixin/: BlockDataAccessorMixin.java  CommandProtectionCloneMixin.java  CommandProtectionDataCommandsMixin.java  CommandProtectionDataMixin.java  CommandProtectionFillMixin.java  CommandProtectionKillMixin.java  EntityDataAccessorMixin.java  (+15 more)
src/main/resources/: redstone_ai.mixins.json
(+75 files in other folders)
